-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.4.0
-
None
-
7c33549f98d5a9b068b0ad775a4b5ad38ca94ac4
I have in my custom dumper:
registerCommand("threadnames", acthreadnames)
If I call threadnames in the debugger log console it returns the right values, but the Threads view is not populated with any data (only thread IDs).
The debugger log doesn't seem to call "threadnames" at all, even though "Display thread names" is enabled.
I doubt this is related to my custom dumper though. Looks more general.