Debugger: Retrieve threads info for coredump

handleStop2 used to retrieve the stack. This is no longer right.

While at it, remove outdated comment regarding GDB version.

Task-number: QTCREATORBUG-14617
Change-Id: I9511fe5315e941fd9e08737a5b11677f9fdf8d09
Reviewed-by: hjk <hjk@theqtcompany.com>
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>